--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="background">test</string>
     <string name="failedtoload">Failed to load images</string>
+    <string name="share_wallpaper">Share wallpaper</string>
 </resources>
